just created there file i needed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Weather app | ndille</title>
 </head>
 <body>
-    
 
+    <div class="container">
+        <h1>Weather App</h1>
+        <form id="weather-form">
+            <input type="text" id="city" placeholder="Enter city name" required>
+            <button type="submit">Get Weather</button>
+        </form>
+        <div id="weather-result"></div>
 
 
 
